argocd/platform/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    gateway.scg.sh/public: 'true'
