argocd/platform/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "*.platform.scg.sh"
spec:
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: argocd-https
    - name: public
      namespace: gateway-system
      sectionName: platform-https
  hostnames:
    - argocd.infra.scg.sh
    - argocd.platform.scg.sh
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
